homeworks/klymenko-oleksandr/module-03/lesson-08/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app
  namespace: dev
spec:
  replicas: 10
  selector:
    matchLabels:
      app: course-app

  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
        maxSurge: 2

  template:
    metadata:
      labels:
        app: course-app
    spec:
      containers:
        - name: course-app
          image: kyle21/course-app:1.0.1
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          volumeMounts:
            - name: appdata
              mountPath: /data

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
            
      volumes:
        - name: appdata
          emptyDir: {}
