homeworks/klymenko-oleksandr/module-03/lesson-08/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app
  namespace: dev
  labels:
    app: course-app
spec:
  type: ClusterIP
  selector:
    app: course-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
